infrastructure/authentik/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik-httproute
  namespace: authentik
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - authentik.zeroenet.cloud
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: authentik-server
          port: 80
